fix(Explore): fixes broken layout of tooltips (#14529)
* fix: moves LESS styles into Emotion, fixes broken layout of tooltips

* fix: tests

* style: linting

* style: better styling location

--- a/superset-frontend/src/explore/main.less
+++ b/superset-frontend/src/explore/main.less
@@ -47,32 +47,8 @@
   margin-right: 3px;
 }
 
-.control-panel-section {
-  margin-bottom: 0;
-  box-shadow: none;
-
-  &:last-child {
-    padding-bottom: 40px;
-  }
-}
-
 .background-transparent {
   background-color: transparent !important;
-}
-
-.control-panel-section {
-  .panel-body {
-    margin-left: 15px;
-    padding-bottom: 0px;
-  }
-
-  .control-label {
-    margin-bottom: 0px;
-  }
-
-  span.label {
-    display: inline-block;
-  }
 }
 
 .fa.expander {
